<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/padding_small"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/corner_radius_medium"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_small"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_email_title"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_small"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/primary"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/onSurfaceVariant"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginVertical="@dimen/margin_small"
                android:alpha="0.3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:text="@string/verify_email_message"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:textColor="@color/onSurfaceVariant"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:background="@drawable/bg_rounded"
                android:paddingHorizontal="@dimen/padding_small"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="adetunji.adegbite1@gmail.com"
                    android:background="@drawable/bg_rounded"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_weight="0.95"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    />
                <ImageButton
                    android:id="@+id/editEmail"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_edit_pencil"
                    app:tint="@color/secondary"
                    android:layout_weight="0.05"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_marginStart="@dimen/margin_small"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_a_valid_email"
                android:textColor="@color/error"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone"
                tools:visibility="visible"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/cancel"
                    android:backgroundTint="@color/onSurface"
                    android:layout_alignParentStart="true"
                    />
                <Button
                    android:id="@+id/proceedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/proceed"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>